2006-12-11  Brian Warner  <warner@lothar.com>

	* buildbot/process/step.py: remove this file, these names were
	deprecated in 0.7.5 and are now being removed.
	* buildbot/process/step_twisted.py: same
	* buildbot/test/test_steps.py (ReorgCompatibility): remove test

	* buildbot/twcompat.py: remove the empty file, yay it is gone

	* buildbot/twcompat.py (waitForDeferred): remove the monkeypatch,
	tw-2.0.0 and newer have the method we need.
	(getProcessOutputAndValue): same
	(which): remove this method, tw-2.0.0 t.p.procutils has it

	* buildbot/twcompat.py (implements): remove this method
	* buildbot/*: import implements() from zope.interface directly

	* buildbot/status/mail.py: stop falling back to importing
	twisted.protocols.smtp.sendmail, now that we don't need tw-1.3.0
	support

	* buildbot/twcompat.py (Interface): remove this import
	* buildbot/*: import Interface from zope.interface directly

	* buildbot/twcompat.py (providedBy): remove this method
	* buildbot/*: turn all uses of providedBy(obj, iface) into
	iface.providedBy(obj)

	* buildbot/twcompat.py (maybeWait): remove this method, now that
	we no longer maintain compatibility with Twisted<=1.3.0 .
	Twisted-2.0.0 and later allow trial methods to return Deferreds
	directly.
	* buildbot/test/*: remove all uses of maybeWait

	* buildbot/__init__.py (version): bump to 0.7.5+ while between
	releases
	* docs/buildbot.texinfo: same

2006-12-10  Brian Warner  <warner@lothar.com>

	* buildbot/__init__.py (version): Releasing buildbot-0.7.5
	* docs/buildbot.texinfo: set version to match

2006-12-10  Brian Warner  <warner@lothar.com>

	* README (REQUIREMENTS): update for release
	* NEWS: update for release
	* buildbot/slave/commands.py (command_version): mention that this
	version (2.2) was released with buildbot-0.7.5

	* buildbot/test/test_config.py (StartService.testStartService):
	inhibit the usual read-config-on-startup behavior, since otherwise
	the log.err that gets recorded causes the test to fail
